--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
     height: 80vh;
-    background-image: url(../../images/roberto-nickson-1424153-unsplash.jpg);
+    background-image: url(../images/roberto-nickson-1424153-unsplash.jpg);
     background-size: cover;
     background-position: 0, -10rem;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
